# vector-db-demo

./: .gitignore  LICENSE  README.md  chroma.py  faiss-demo.py  main.py  pyproject.toml  test.py
faiss_vector_store/: index.faiss  index.pkl
