[project]
name = "chroma-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dashscope",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-milvus>=0.3.3",
    "openai>=2.14.0",
    "pymilvus[milvus-lite]>=2.6.6",
    "pypdf>=6.5.0",
    "python-dotenv>=1.2.1",
]
